@@ -1,3 +1,8 @@
+2003-10-24  Christian Rose  <menthos@menthos.com>
+
+	* po-checktrans, po-checktrans.py: Removed. No need to have these
+	in the module, just use "intltool-update --report" instead.
+
 2003-10-12  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* boards/boardicons/submarine.png: added shadow 
